<resources>
    <string name="app_name">MiliMeter</string>

    <string name="home">홈</string>
    <string name="body">신체</string>
    <string name="result">결과</string>
    <string name="goal">목표</string>
    <string name="setting">설정</string>

    <string name="critical_items">*필수항목입니다.</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="check">확인</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="auto_login">자동 로그인</string>
    <string name="logout">로그아웃</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>

    // 홈
    <string name="name">이름:&#160;</string>
    <string name="military_number">군번:&#160;</string>
    <string name="group_code">그룹코드:&#160;</string>
    <string name="Dday_setting">전역일 설정</string>
    <string name="login_user">로그인 및 계정</string>
    <string name="ch_profile">프로필 사진 변경</string>

    // 신체
    <string name="body_weight">목표치보다</string>
    <string name="more_weight">과제중</string>
    <string name="less_weight">저체중</string>
    <string name="goal_body">목표 몸무게 도달!!</string>
    <string name="default_body">목표치까지 +/- 00kg</string>
    <string name="exercise_name">운동명을 입력해주세요.</string>
    <string name="exercise_chart">*운동차트에 기록됩니다.</string>
    <string name="hint_exercise">예시 : 달리기</string>

    // 결과
    <string name="result_title">운동결과</string>
    <string name="total">전 종목</string>
    <string name="legtuk2">레그턱</string>
    <string name="legtuk1">레그턱</string>
    <string name="running1">240M 왕복달리기</string>
    <string name="running2">240M</string>
    <string name="circuit1">전장순환운동</string>
    <string name="circuit2">전장순환</string>
    <string name="type_date">&#160;종목/날짜</string>
    <string name="basic_record_input">기록 입력</string>
    <string name="type">종목 :</string>
    <string name="date">날짜 :</string>
    <string name="record">기록/몸무게 :</string>
    <string name="hint_record">시간은 초로 입력해주세요.</string>
    <string name="click">클릭해서 입력</string>


    // 목표
    <string name="goal_grade">목표등급:&#160;</string>
    <string name="now_grade">현재등급:&#160;</string>
    <string name="week_top_grade">(주간 최고 등급)</string>

    // 설정
    <string name="setting_title">환경설정</string>
    <string name="theme">테마</string>
    <string name="language">언어</string>
    <string name="password">회원정보</string>
    <string name="user_information">개인정보관리</string>
    <string name="user_information1">개인정보관리</string>

    <string name="basic_theme">기본 테마</string>
    <string name="special_theme">특별한 테마</string>
    <string name="basic">기본</string>
    <string name="dark">다크</string>
    <string name="color">색상</string>
    <string name="theme_icon">테마 아이콘</string>
    <string name="theme_color">테마 색상</string>
    <string name="account">*이 테마는 아이콘 그림이 다음과 같이 적용됩니다.</string>
    <string name="light_green">테마1</string>
    <string name="green">테마2</string>
    <string name="dark_green">테마3</string>

    <string name="lang1">한국어</string>
    <string name="lang2">영어</string>


    <string name="password_change">비밀번호 변경하기</string>
    <string name="group_manager">그룹계정관리</string>
    <string name="before_pw">현재 비밀번호를 입력하세요</string>
    <string name="after_pw">새로운 비밀번호를 입력하세요</string>
    <string name="notice_pw">*이전과 다른 비밀번호로 설정해주세요\n*비밀번호는 5~20자리 내로 설정해주세요</string>

    <string name="user_info">내정보</string>
    <string name="invite">그룹 내 하위회원 초대</string>
    <string name="merge">그룹 내 하위그룹 병합</string>
    <string name="manager">관리자 페이지</string>
    <string name="make_group">그룹개설</string>
    <string name="invite_group">그룹초대</string>
    <string name="merge_group">그룹병합</string>
    <string name="drop">그룹탈퇴</string>
    <string name="group_code_change">이 그룹의 그룹코드 변경</string>
    <string name="lower_level_member">의 하위회원</string>
    <string name="invite1">초대하고 싶은 유저의 아이디를 입력하여 그 유저를 자신의 하위그룹멤버로서 초대합니다. 그룹에 속하지 않은 유저만 초대할 수 있습니다.</string>
    <string name="invite2">초대받는 유저를 관리자로 지정</string>
    <string name="invite3">초대받는 유저의 아이디</string>
    <string name="merge1">초대하고 싶은 그룹의 그룹장 아이디를 입력하여 그 유저를 자신의 하위그룹 관리자로서 초대합니다. 그룹에 속해 있는 유저만 초대할 수 있습니다.</string>
    <string name="merge2">하위그룹 그룹장의 아이디</string>
    <string name="merge3">하위그룹 그룹장의 비밀번호</string>
    <string name="merge4">하위그룹의 원래 그룹코드</string>
    <string name="make_group_code">새로 개설할 그룹의 그룹코드</string>
    <string name="edit_submember">하위유저 편집</string>
    <string name="check0">중복체크</string>
    <string name="edit1">이 계정은 탈퇴 후 비어있는 그룹계정입니다. 새로운 하위회원을 이 자리에 초대할 수 있고, 이 그룹계정이 필요없다면 삭제할 수 있습니다.(단, 삭제할 경우 이 계정의 하위계정이 하나도 없는 상태에만 가능합니다.)</string>
    <string name="edit2">이 그룹계정을 관리자계정으로</string>
    <string name="edit3">하위회원을 초대하여 이 자리에 지정</string>
    <string name="edit4">이 그룹계정 삭제</string>

    <string name="height">키</string>
    <string name="weight">몸무게</string>
    <string name="blood_type">혈액형 :</string>
    <string name="notice_info">"-"없이 숫자만 입력</string>
    <string name="goal_weight">목표 몸무게</string>
    <string name="goal_total">전체 종목 목표 등급 :</string>
    <string name="goal_leg">레그턱 목표 등급 :</string>
    <string name="goal_240">240m 왕복달리기 목표 등급 :</string>
    <string name="goal_cir">전장순환운동 목표 등급 :</string>
    <string name="drop1">해당 계정 그룹에서 탈퇴시키기</string>

</resources>