<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/exercise_name"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/exercise_chart"
            android:textColor="#C80808"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/typeEt"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_exercise" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        android:gravity="center">

        <Button
            android:id="@+id/saveBt"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="?attr/cardBackground"
            android:text="@string/save"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelBt"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="?attr/cardBackground"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?attr/textColor"
            android:layout_marginLeft="20dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>