<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appWindowBackground"
    tools:context=".activities.SettingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBarCl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?attr/cardBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iconIv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/ic_baseline_miscellaneous_services_20_white"
                app:tint="?attr/textColorBanner" />

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="환경설정"
                android:textColor="?attr/textColorBanner"
                android:textSize="@dimen/largeText" />
        </LinearLayout>

        <ImageView
            android:id="@+id/borderLineIv"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?attr/textColorBanner"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bodySv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/menuBottomLl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarCl">

        <LinearLayout
            android:id="@+id/bodyLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="?attr/cardBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/themeSettingBt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/ic_baseline_filter_15_white"
                            app:tint="?attr/textColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="테마"
                            android:textColor="?attr/textColor"
                            android:textSize="@dimen/middleText" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:id="@+id/languageSettingBt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/ic_baseline_translate_15_white"
                            app:tint="?attr/textColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="언어"
                            android:textColor="?attr/textColor"
                            android:textSize="@dimen/middleText" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:id="@+id/noticeSettingBt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/ic_baseline_notifications_none_15_white"
                            app:tint="?attr/textColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="알림"
                            android:textColor="?attr/textColor"
                            android:textSize="@dimen/middleText" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:id="@+id/privateSettingBt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/ic_baseline_admin_panel_settings_15_white"
                            app:tint="?attr/textColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="회원정보"
                            android:textColor="?attr/textColor"
                            android:textSize="@dimen/middleText" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:id="@+id/userSettingBt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/ic_baseline_pan_tool_13_white"
                            app:tint="?attr/textColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="개인정보관리"
                            android:textColor="?attr/textColor"
                            android:textSize="@dimen/middleText" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/listDivider" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/menuBottomLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/cardBackground"
        android:gravity="fill_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/bottomBorderLineIv"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?attr/textColorBanner"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/homeBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:drawableTop="@drawable/ic_baseline_home_20_white"
                android:drawableTint="?attr/textColorBanner"
                android:gravity="center_horizontal"
                android:text="@string/home"
                android:textAllCaps="false"
                android:textColor="?attr/textColorBanner"
                android:textSize="15sp" />

            <Button
                android:id="@+id/bodyBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:drawableTop="@drawable/ic_baseline_accessibility_20_white"
                android:drawableTint="?attr/textColorBanner"
                android:gravity="center_horizontal"
                android:text="@string/body"
                android:textAllCaps="false"
                android:textColor="?attr/textColorBanner"
                android:textSize="15sp" />

            <Button
                android:id="@+id/resultBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:drawableTop="@drawable/ic_baseline_insert_chart_outlined_20_white"
                android:drawableTint="?attr/textColorBanner"
                android:gravity="center_horizontal"
                android:text="@string/result"
                android:textAllCaps="false"
                android:textColor="?attr/textColorBanner"
                android:textSize="15sp" />

            <Button
                android:id="@+id/goalBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:drawableTop="@drawable/ic_baseline_track_changes_20_white"
                android:drawableTint="?attr/textColorBanner"
                android:gravity="center_horizontal"
                android:text="@string/goal"
                android:textAllCaps="false"
                android:textColor="?attr/textColorBanner"
                android:textSize="15sp" />

            <Button
                android:id="@+id/settingBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:drawableTop="@drawable/ic_baseline_miscellaneous_services_20_white"
                android:drawableTint="?attr/textColorBanner"
                android:gravity="center_horizontal"
                android:text="@string/setting"
                android:textAllCaps="false"
                android:textColor="?attr/textColorBanner"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>